apps/landing-page/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: hello2.biederbeck.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page-service
            port:
              number: 80
  tls:
  - hosts:
    - hello2.biederbeck.de
    secretName: hello2-certificate
